--- a/aplicacion/templates/aplicacion/bestSeller.html
+++ b/aplicacion/templates/aplicacion/bestSeller.html
@@ -7,4 +7,30 @@
 
 {% block contenido %}
 <h2>Nuestros best sellers</h2>
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Autor</th>
+            <th>Editorial</th>
+            <th>Genero</th>
+            <th>Precio</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for c in bestSeller  %}
+        <tr>
+            <td>{{ c.id }}</td>
+            <td>{{ c.nombre }}</td>
+            <td>{{ c.autor}}</td>
+            <td>{{ c.editorial }}</td>
+            <td>{{ c.genero }}</td>
+            <td>{{ c.precio }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
 {% endblock contenido %}
