--- a/aplicacion/templates/aplicacion/libros.html
+++ b/aplicacion/templates/aplicacion/libros.html
@@ -21,7 +21,7 @@
         </tr>
     </thead>
     <tbody>
-    {% for c in cursos  %}
+    {% for c in libros  %}
         <tr>
             <td>{{ c.id }}</td>
             <td>{{ c.nombre }}</td>
