--- a/aplicacion/templates/aplicacion/bestSeller.html
+++ b/aplicacion/templates/aplicacion/bestSeller.html
@@ -8,6 +8,22 @@
 {% block contenido %}
 <h2>Nuestros best sellers</h2>
 
+<table>
+    <tr>
+        {% if user.is_authenticated %} 
+        <td width="200"><h2>Best Sellers</h2></td>
+        <td>
+            <a
+            href="{% url 'bestSeller_create' %}"
+            class="btn btn-primary btn-sm"
+            ><i class="fa fa-plus fa-lg" title="Crear"> </i>
+            </a>
+        </td>
+        {% endif %}
+               
+    </tr>
+</table>
+
 <table class="table table-striped">
     <thead>
         <tr>
@@ -17,6 +33,7 @@
             <th>Editorial</th>
             <th>Genero</th>
             <th>Precio</th>
+            
         </tr>
     </thead>
     <tbody>
@@ -28,6 +45,23 @@
             <td>{{ c.editorial }}</td>
             <td>{{ c.genero }}</td>
             <td>{{ c.precio }}</td>
+
+            {% if user.is_authenticated %} 
+            <td> 
+                <a
+                  href="{% url 'bestSeller_update' c.id %}"
+                  class="btn btn-primary"
+                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                  ><i class="fa fa-edit fa-sm" title="Edit Record"></i>
+                </a>
+                <a
+                href="{% url 'bestSeller_delete' c.id %}"
+                class="btn btn-danger"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                ><i class="fa fa-trash fa-sm" title="Delete Record"></i>
+              </a>                              
+            </td> 
+            {% endif %}
         </tr>
     {% endfor %}
     </tbody>
