--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -16,23 +16,46 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static  'css/styles.css' %}" rel="stylesheet" />
+         <!-- Font Awesome-->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">  
     </head>
-    <body id="page-top">
+    
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0"> 
+
+                    {% if user.is_authenticated %}                
+    
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'libros' %}">Libros</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'libreria' %}">Libreria</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'bestSeller' %}">Best Sellers</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}">Sucursales</a></li>
+                        <p style="color:white">  [{{user.username}}]  </p>
+                        
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link" style="background: none; border: none;">Logout</button>
+                        </form>
+
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'libros' %}">Libros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'libreria' %}">Libreria</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'bestSeller' %}">Best Sellers</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}">Sucursales</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'registrar' %}">Registrarse</a></li>
+                        
+                        
+                    {% endif %}
                         
                     </ul>
                 </div>
