--- a/aplicacion/templates/aplicacion/libreria.html
+++ b/aplicacion/templates/aplicacion/libreria.html
@@ -8,12 +8,28 @@
 {% block contenido %}
 <h2>Explora nuestros articulos de libreria</h2>
 
+<table>
+    <tr>
+        <td width="200"><h2>Libreria</h2></td>
+        {% if user.is_authenticated %} 
+        <td>
+            <a
+            href="{% url 'libreria_create' %}"
+            class="btn btn-primary btn-sm"
+            ><i class="fa fa-plus fa-lg" title="Crear"> </i>
+            </a>
+        </td>  
+        {% endif %}      
+    </tr>
+</table>
+
 <table class="table table-striped">
     <thead>
         <tr>
             <th>Id</th> 
             <th>Articulo</th>
             <th>Precio</th>
+            
             
         </tr>
     </thead>
@@ -23,7 +39,24 @@
             <td>{{ c.id }}</td>
             <td>{{ c.articulo }}</td>
             <td>{{ c.precio}}</td>
-            
+
+            {% if user.is_authenticated %} 
+            <td> 
+                <a
+                  href="{% url 'libreria_update' c.id %}"
+                  class="btn btn-primary"
+                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                  ><i class="fa fa-edit fa-sm" title="Edit Record"></i>
+                </a>
+                <a
+                href="{% url 'libreria_delete' c.id %}"
+                class="btn btn-danger"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
+                ><i class="fa fa-trash fa-sm" title="Delete Record"></i>
+              </a>               
+                              
+            </td> 
+            {% endif %}
         </tr>
     {% endfor %}
     </tbody>
