Entrega final proyecto

--- a/aplicacion/templates/aplicacion/agregarAvatar.html
+++ b/aplicacion/templates/aplicacion/agregarAvatar.html
@@ -2,19 +2,18 @@
 
 
 {% block titulo %}
-<h1 class="mb-5">Login</h1>
+<h1 class="mb-5">Avatar</h1>
 {% endblock titulo %}
 
 
 {% block contenido %}
     
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <!-- Comentario  -->
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Guardar">
+    <input type="submit" value="Actualizar Avatar">
 </form>
 
 {% endblock contenido %}
