--- a/aplicacion/templates/aplicacion/bestSeller.html
+++ b/aplicacion/templates/aplicacion/bestSeller.html
@@ -16,7 +16,7 @@
             <a
             href="{% url 'bestSeller_create' %}"
             class="btn btn-primary btn-sm"
-            ><i class="fa fa-plus fa-lg" title="Crear"> </i>
+            ><i class="fa-solid fa-plus" title="Crear"> </i>
             </a>
         </td>
         {% endif %}
@@ -24,6 +24,19 @@
     </tr>
 </table>
 
+{% if form %}
+<table>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_table }}
+        <tr>
+            <td colspan="6">
+                <button type="submit" class="btn btn-success">Editar</button>
+            </td>
+        </tr>
+    </form>
+</table>
+{% else %}
 <table class="table table-striped">
     <thead>
         <tr>
@@ -52,13 +65,13 @@
                   href="{% url 'bestSeller_update' c.id %}"
                   class="btn btn-primary"
                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-                  ><i class="fa fa-edit fa-sm" title="Edit Record"></i>
+                  ><i class="fa-regular fa-pen-to-square" title="Edit Record"></i>
                 </a>
                 <a
                 href="{% url 'bestSeller_delete' c.id %}"
                 class="btn btn-danger"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-                ><i class="fa fa-trash fa-sm" title="Delete Record"></i>
+                ><i class="fa-solid fa-delete-left" title="Delete Record"></i>
               </a>                              
             </td> 
             {% endif %}
@@ -66,5 +79,6 @@
     {% endfor %}
     </tbody>
 </table>
+{% endif %}
 
 {% endblock contenido %}
