--- a/aplicacion/templates/aplicacion/sucursales.html
+++ b/aplicacion/templates/aplicacion/sucursales.html
@@ -9,7 +9,6 @@
 {% block contenido %}
 <h2>Conoce nuestras sucursales</h2>
 
-
 <table>
     <tr>
         <td width="200"><h2>Sucursales</h2></td>
@@ -19,7 +18,7 @@
             <a
             href="{% url 'sucursales_create' %}"
             class="btn btn-primary btn-sm"
-            ><i class="fa fa-plus fa-lg" title="Crear"> </i>
+            ><i class="fa-solid fa-plus" title="Crear"> </i>
             </a>
         </td>      
         
@@ -27,14 +26,25 @@
     </tr>
 </table>
 
+{% if form %}
+<table>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_table }}
+        <tr>
+            <td colspan="3">
+                <button type="submit" class="btn btn-success">Editar</button>
+            </td>
+        </tr>
+    </form>
+</table>
+{% else %}
 <table class="table table-striped">
     <thead>
         <tr>
             <th>Id</th>
-            <th>Direccion</th>
+            <th>Dirección</th>
             <th>Contacto</th>
-            
-            
         </tr>
     </thead>
     <tbody>
@@ -50,21 +60,21 @@
                   href="{% url 'sucursales_update' c.id %}"
                   class="btn btn-primary"
                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-                  ><i class="fa fa-edit fa-sm" title="Edit Record"></i>
+                  ><i class="fa-regular fa-pen-to-square" title="Edit Record"></i>
                 </a>
                 <a
                 href="{% url 'sucursales_delete' c.id %}"
                 class="btn btn-danger"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-                ><i class="fa fa-trash fa-sm" title="Delete Record"></i>
+                ><i class="fa-solid fa-delete-left" title="Delete Record"></i>
               </a>                               
             </td> 
-            
             {% endif %} 
             
         </tr>
     {% endfor %}
     </tbody>
 </table>
+{% endif %}
 
 {% endblock contenido %}
