--- a/aplicacion/templates/aplicacion/editarPerfil.html
+++ b/aplicacion/templates/aplicacion/editarPerfil.html
@@ -2,7 +2,7 @@
 
 
 {% block titulo %}
-<h1 class="mb-5">Login</h1>
+<h1 class="mb-5">Editar Perfil</h1>
 {% endblock titulo %}
 
 
@@ -10,11 +10,10 @@
     
 <form action="" method="post">
     {% csrf_token %}
-    <!-- Comentario  -->
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Guardar">
+    <input type="submit" value="Enviar">
 </form>
 
 {% endblock contenido %}
