--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -4,7 +4,7 @@
         {% load static %}
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="TercerPreEntrega" />
+        <meta name="description" content="EntregaFinal" />
         <meta name="author" content="AgustinaMieres" />
         <title>Libreria del Bosque</title>
         <!-- Favicon-->
@@ -18,6 +18,7 @@
         <link href="{% static  'css/styles.css' %}" rel="stylesheet" />
          <!-- Font Awesome-->
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">  
+         
     </head>
     
         <!-- Navigation-->
@@ -38,8 +39,18 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'libreria' %}">Libreria</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'bestSeller' %}">Best Sellers</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}">Sucursales</a></li>
-                        <p style="color:white">  [{{user.username}}]  </p>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'acerca_de_mi' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href=""></a></li>
                         
+                        
+
+                        <p style="color:white">  [{{user.username}}]  </p>
+                        <div class="text-center">
+                            <a  href="{% url 'agregar_avatar' %}" ><img src="{{ request.session.avatar }}" height="30px" weight="30px"/></a>
+                        </div>  
+                        <li class="nav-item"><a class="nav-link" href=""></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'perfil' %}">Perfil</a></li>
+                         
                         <form action="{% url 'logout' %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="nav-link" style="background: none; border: none;">Logout</button>
