Formulario de busqueda

--- a/aplicacion/templates/aplicacion/bestSeller.html
+++ b/aplicacion/templates/aplicacion/bestSeller.html
@@ -18,6 +18,11 @@
             class="btn btn-primary btn-sm"
             ><i class="fa-solid fa-plus" title="Crear"> </i>
             </a>
+
+            <a href="{% url 'buscar_bestSeller' %}" class="btn btn-primary btn-sm">
+                <i class="fa-solid fa-magnifying-glass" title="Buscar libros"></i>
+                
+            </a>
         </td>
         {% endif %}
                
