--- a/aplicacion/templates/aplicacion/buscarArticulo.html
+++ b/aplicacion/templates/aplicacion/buscarArticulo.html
@@ -2,15 +2,15 @@
 
 
 {% block titulo %}
-<div class="masthead-subheading">Buscar libros</div>
+<div class="masthead-subheading">Buscar articulo</div>
 {% endblock titulo %}
 
 
 {% block contenido %}
 
-<form action="{% url 'encontrar_libros' %}" method="get">
+<form action="{% url 'encontrar_libreria' %}" method="get">
     {% csrf_token %}
-    <p>Buscar por nombre de libro: <input type="text" name="buscar" id="buscar"></p>
+    <p>Buscar articulo: <input type="text" name="buscar" id="buscar"></p>
     <input type="submit" value="Buscar">
 </form>
 
