--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -62,6 +62,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'libreria' %}">Libreria</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'bestSeller' %}">Best Sellers</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}">Sucursales</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'acerca_de_mi' %}">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'registrar' %}">Registrarse</a></li>
                         
