--- a/aplicacion/templates/aplicacion/sucursales.html
+++ b/aplicacion/templates/aplicacion/sucursales.html
@@ -21,6 +21,10 @@
             class="btn btn-primary btn-sm"
             ><i class="fa-solid fa-plus" title="Crear"> </i>
             </a>
+            <a href="{% url 'buscar_sucursal' %}" class="btn btn-primary btn-sm">
+                <i class="fa-solid fa-magnifying-glass" title="Buscar libros"></i>
+                
+            </a>
         </td>      
         
         {% endif %}  
