Edicion README.md

--- a/aplicacion/templates/aplicacion/bestSeller.html
+++ b/aplicacion/templates/aplicacion/bestSeller.html
@@ -55,25 +55,25 @@
         </tr>
     </thead>
     <tbody>
-    {% for c in bestSeller  %}
+    {% for b in bestSeller  %}
         <tr>
-            <td>{{ c.id }}</td>
-            <td>{{ c.nombre }}</td>
-            <td>{{ c.autor}}</td>
-            <td>{{ c.editorial }}</td>
-            <td>{{ c.genero }}</td>
-            <td>{{ c.precio }}</td>
+            <td>{{ b.id }}</td>
+            <td>{{ b.nombre }}</td>
+            <td>{{ b.autor}}</td>
+            <td>{{ b.editorial }}</td>
+            <td>{{ b.genero }}</td>
+            <td>{{ b.precio }}</td>
 
             {% if user.is_authenticated %} 
             <td> 
                 <a
-                  href="{% url 'bestSeller_update' c.id %}"
+                  href="{% url 'bestSeller_update' b.id %}"
                   class="btn btn-primary"
                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
                   ><i class="fa-regular fa-pen-to-square" title="Edit Record"></i>
                 </a>
                 <a
-                href="{% url 'bestSeller_delete' c.id %}"
+                href="{% url 'bestSeller_delete' b.id %}"
                 class="btn btn-danger"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
                 ><i class="fa-solid fa-delete-left" title="Delete Record"></i>
