--- a/aplicacion/templates/aplicacion/libros.html
+++ b/aplicacion/templates/aplicacion/libros.html
@@ -55,20 +55,20 @@
             </tr>
         </thead>
         <tbody>
-        {% for c in libros  %}
+        {% for l in libros  %}
             <tr>
-                <td>{{ c.id }}</td>
-                <td>{{ c.nombre }}</td>
-                <td>{{ c.autor }}</td>
-                <td>{{ c.editorial }}</td>
-                <td>{{ c.genero }}</td>
-                <td>{{ c.precio }}</td>
+                <td>{{ l.id }}</td>
+                <td>{{ l.nombre }}</td>
+                <td>{{ l.autor }}</td>
+                <td>{{ l.editorial }}</td>
+                <td>{{ l.genero }}</td>
+                <td>{{ l.precio }}</td>
                 {% if user.is_authenticated %} 
                     <td> 
-                        <a href="{% url 'libros_update' c.id %}" class="btn btn-primary">
+                        <a href="{% url 'libros_update' l.id %}" class="btn btn-primary">
                             <i class="fa-regular fa-pen-to-square" title="Edit Record"></i>
                         </a>
-                        <a href="{% url 'libros_delete' c.id %}" class="btn btn-danger">
+                        <a href="{% url 'libros_delete' l.id %}" class="btn btn-danger">
                             <i class="fa-solid fa-delete-left" title="Delete Record"></i>
                         </a>
                     </td> 
